[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ahmad Faizal B H <ahmadfaizalbh726@gmail.com"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^2.2.24"
python = "^3.8"
[tool.poetry.dev-dependencies]
